Fix legend display on Firefox+Windows, close #2287

--- a/gatling-charts/src/main/resources/assets/style/style.css
+++ b/gatling-charts/src/main/resources/assets/style/style.css
@@ -377,7 +377,7 @@ h1 span {
 
 .geant {
 	width: 900px;
-	height: 360px;
+	height: 362px;
 }
 
 .extensible-geant {
